security: address PR review feedback with comprehensive improvements
Security Enhancements:
- Replace hardcoded database credentials with environment variables
- Strengthen Redis Commander authentication (configurable via env vars)
- Restrict DevContainer sudo permissions to essential commands only
- Use environment variables in Adminer auto-login for security

Infrastructure Improvements:
- Add HEALTHCHECK to DevContainer Dockerfile
- Use --no-install-recommends for smaller image size
- Increase Redis memory limit from 256MB to 512MB
- Add Redis timeout and connection configurations
- Enhanced PostgreSQL performance with connection limits and timeouts

Migration Reliability:
- Add retry logic with exponential backoff (3 attempts)
- Enhanced error logging with database connection details
- Pre-migration database connectivity verification
- Proper connection cleanup in error scenarios

Performance Optimizations:
- PostgreSQL: 200 max connections, optimized buffer settings
- Redis: 1000 max clients, improved keepalive settings
- Statement timeouts to prevent hanging queries

Addresses security audit findings while maintaining development convenience.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:22-bookworm
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     # Development tools
     git \
     curl \
@@ -23,7 +23,7 @@ RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | d
     && chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
     && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
     && apt update \
-    && apt install gh -y
+    && apt install gh -y --no-install-recommends
 
 # Install global Node.js packages
 RUN npm install -g \
@@ -35,7 +35,7 @@ RUN npm install -g \
 # Create non-root user for development
 RUN useradd -m -s /bin/bash vscode \
     && usermod -aG sudo vscode \
-    && echo 'vscode ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+    && echo 'vscode ALL=(root) NOPASSWD: /usr/bin/apt, /usr/bin/apt-get, /bin/systemctl, /usr/bin/npm' >> /etc/sudoers
 
 # Set up workspace directory
 RUN mkdir -p /workspaces/project-nexus && chown vscode:vscode /workspaces/project-nexus
@@ -45,6 +45,10 @@ USER vscode
 
 # Set working directory
 WORKDIR /workspaces/project-nexus
+
+# Health check to ensure container is ready
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD node --version && npm --version || exit 1
 
 # Default command
 CMD ["sleep", "infinity"]
