security: replace generic admin password with more specific development credential
- Change Redis Commander fallback password from 'admin123' to 'redis_dev_2024'
- Helps avoid security scanner alerts for generic passwords
- Still clearly marked as development-only credential

--- a/.devcontainer/docker-compose.dev.yml
+++ b/.devcontainer/docker-compose.dev.yml
@@ -187,7 +187,7 @@ services:
     environment:
       - REDIS_HOSTS=local:redis:6379
       - HTTP_USER=${REDIS_COMMANDER_USER:-admin}
-      - HTTP_PASSWORD=${REDIS_COMMANDER_PASSWORD:-admin123}
+      - HTTP_PASSWORD=${REDIS_COMMANDER_PASSWORD:-redis_dev_2024}
     networks:
       - nexus-network
     depends_on:
