--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,11 @@
 {
   "name": "Project Nexus - Full Stack Development",
-  "dockerComposeFile": ["docker-compose.dev.yml"],
-  "service": "devcontainer",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "."
+  },
   "workspaceFolder": "/workspaces/project-nexus",
-  
+
   // Port forwarding for all services
   "forwardPorts": [3000, 3001, 5432, 6379, 8080, 8081],
   "portsAttributes": {
@@ -13,7 +15,7 @@
     },
     "3001": {
       "label": "Frontend Web (Next.js)",
-      "onAutoForward": "openPreview"
+      "onAutoForward": "openBrowserOnce"
     },
     "5432": {
       "label": "PostgreSQL Database",
@@ -25,11 +27,11 @@
     },
     "8080": {
       "label": "Adminer (Database Admin)",
-      "onAutoForward": "notify"
+      "onAutoForward": "openBrowserOnce"
     },
     "8081": {
       "label": "Redis Commander",
-      "onAutoForward": "notify"
+      "onAutoForward": "silent"
     }
   },
 
@@ -41,27 +43,27 @@
         "ms-vscode.vscode-typescript-next",
         "bradlc.vscode-tailwindcss",
         "ms-vscode.vscode-json",
-        
+
         // GraphQL
         "graphql.vscode-graphql",
         "graphql.vscode-graphql-syntax",
-        
+
         // Database tools
         "ms-ossdata.vscode-postgresql",
         "cweijan.vscode-redis-client",
-        
+
         // Git and GitHub
         "github.vscode-pull-request-github",
         "github.copilot",
         "github.copilot-chat",
         "eamodio.gitlens",
-        
+
         // Testing and quality
         "ms-vscode.test-adapter-converter",
         "orta.vscode-jest",
         "esbenp.prettier-vscode",
         "ms-vscode.vscode-eslint",
-        
+
         // General development
         "ms-vscode.vscode-docker",
         "ms-azuretools.vscode-docker",
@@ -91,16 +93,35 @@
     }
   },
 
-  // Features to install (works with Docker Compose)
+  // Features to install
   "features": {
-    "ghcr.io/anthropics/devcontainer-features/claude-code:1.0": {}
+    "ghcr.io/anthropics/devcontainer-features/claude-code:1.0": {},
+    "ghcr.io/robbert229/devcontainer-features/postgresql-client:1": {}
   },
 
-  // Lifecycle commands  
-  "postCreateCommand": "sudo chown -R vscode:vscode /workspaces/project-nexus && npm install --prefix backend && npm install --prefix clients/web",
-  "postStartCommand": "echo '🚀 DevContainer ready!' && echo '📊 Services:' && echo '  PostgreSQL: localhost:5432' && echo '  Redis: localhost:6379' && echo '  Adminer: http://localhost:8080' && echo '  Redis Commander: http://localhost:8081' && echo '' && echo '🗄️  Adminer login details:' && echo '  Server: postgres' && echo '  Username: nexus' && echo '  Password: nexus_secure_2024' && echo '  Database: nexus_db' && echo '' && echo '💡 Quick Adminer URL:' && echo '  http://localhost:8080/?server=postgres&username=nexus&db=nexus_db'",
-  
-  // Devcontainer settings
-  "shutdownAction": "stopCompose",
-  "overrideCommand": false
+  // Container environment variables
+  "containerEnv": {
+    "NODE_ENV": "development",
+    "POSTGRES_HOST": "localhost",
+    "POSTGRES_PORT": "5432",
+    "POSTGRES_DB": "nexus_db",
+    "POSTGRES_USER": "nexus",
+    "POSTGRES_PASSWORD": "nexus_secure_2024",
+    "REDIS_HOST": "localhost",
+    "REDIS_PORT": "6379",
+    "REDIS_PASSWORD": "",
+    "BACKEND_PORT": "3000",
+    "WEB_PORT": "3001",
+    "ADMINER_DEFAULT_SERVER": "localhost",
+    "ADMINER_DEFAULT_USER": "nexus",
+    "ADMINER_DEFAULT_PASSWORD": "nexus_secure_2024",
+    "ADMINER_DEFAULT_DB": "nexus_db"
+  },
+
+  // Lifecycle commands
+  "postCreateCommand": "npm install --prefix backend && npm install --prefix clients/web",
+  "postStartCommand": "sudo supervisord -c /etc/supervisor/conf.d/supervisord.conf && sleep 5 && echo '🚀 DevContainer ready!' && echo '📊 Services:' && echo '  PostgreSQL: localhost:5432' && echo '  Redis: localhost:6379' && echo '  Adminer: http://localhost:8080' && echo '  Redis Commander: http://localhost:8081' && echo '' && echo '🗄️  Adminer login details:' && echo '  Server: localhost' && echo '  Username: nexus' && echo '  Password: nexus_secure_2024' && echo '  Database: nexus_db' && echo '' && echo '💡 Quick Adminer URL:' && echo '  http://localhost:8080/?server=localhost&username=nexus&db=nexus_db'",
+
+  // DevContainer settings
+  "remoteUser": "vscode"
 }
