🩹 fix: correct workspace folder path and add Coder-specific port configuration
- Change workspaceFolder from `/workspaces/project-nexus` to `/workspaces` for proper Coder compatibility
- Update Dockerfile workspace directory and WORKDIR to match new path
- Add appPort configuration for Coder workspace port forwarding requirements
- Fix terminal opening at repository root instead of parent directory

This resolves the issue where users needed to `cd` into the project directory
every time they opened the workspace in Coder.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,12 @@
     "dockerfile": "Dockerfile",
     "context": "."
   },
-  "workspaceFolder": "/workspaces/project-nexus",
+  "workspaceFolder": "/workspaces",
 
   // Port forwarding for all services
   "forwardPorts": [3000, 3001, 5432, 6379, 8080, 8081],
+  // Required for coder workspaces
+  "appPort": ["3000:3000", "3001:3001", "5432:5432", "6279:6279", "8080:8080", "8081:8081"],
   "portsAttributes": {
     "3000": {
       "label": "Backend API (GraphQL)",
