--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -74,7 +74,7 @@ RUN echo "host all all 0.0.0.0/0 scram-sha-256" >> /etc/postgresql/15/main/pg_hb
     && echo "shared_buffers = 256MB" >> /etc/postgresql/15/main/postgresql.conf
 
 # Set up workspace directory
-RUN mkdir -p /workspaces/project-nexus && chown vscode:vscode /workspaces/project-nexus
+RUN mkdir -p /workspaces && chown vscode:vscode /workspaces
 
 # Create supervisor configuration directory and copy config
 RUN mkdir -p /etc/supervisor/conf.d \
@@ -97,7 +97,7 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
 USER vscode
 
 # Set working directory
-WORKDIR /workspaces/project-nexus
+WORKDIR /workspaces
 
 # Default command
 CMD ["sleep", "infinity"]
