🩹 fix: revert workspace folder paths to correct project-specific directories
- Revert workspaceFolder in devcontainer.json from `/workspaces` to `/workspaces/project-nexus`
- Revert WORKDIR in Dockerfile from `/workspaces` to `/workspaces/project-nexus`
- Restore workspace directory creation to `/workspaces/project-nexus`

The previous change to generic `/workspaces` was incorrect. The proper approach
is to use project-specific paths that match the expected repository structure
for both Coder and standard devcontainer environments.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "dockerfile": "Dockerfile",
     "context": "."
   },
-  "workspaceFolder": "/workspaces",
+  "workspaceFolder": "/workspaces/project-nexus",
 
   // Port forwarding for all services
   "forwardPorts": [3000, 3001, 5432, 6379, 8080, 8081],
