🧹 chore: remove unnecessary chown operation for workspace directory
- Remove `chown vscode:vscode` from workspace directory creation
- Simplify workspace setup since running as root user eliminates ownership concerns
- Directory permissions are automatically correct when created by root

This cleanup removes the last vestige of vscode user references from the
Dockerfile, completing the transition to a root-only container setup.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -69,7 +69,7 @@ RUN echo "host all all 0.0.0.0/0 scram-sha-256" >> /etc/postgresql/15/main/pg_hb
     && echo "shared_buffers = 256MB" >> /etc/postgresql/15/main/postgresql.conf
 
 # Set up workspace directory
-RUN mkdir -p /workspaces/project-nexus && chown vscode:vscode /workspaces/project-nexus
+RUN mkdir -p /workspaces/project-nexus
 
 # Create supervisor configuration directory and copy config
 RUN mkdir -p /etc/supervisor/conf.d \
