🔧 fix: update redis-commander to run as redis user instead of removed vscode user
- Change redis-commander user from 'vscode' to 'redis' in supervisord configuration
- Ensures redis-commander service runs under appropriate system user
- Completes the removal of vscode user references from supervisord configuration

This fixes the service configuration after removing the vscode user, ensuring
redis-commander runs under the redis user which is more appropriate for
Redis-related services.

--- a/.devcontainer/supervisord.conf
+++ b/.devcontainer/supervisord.conf
@@ -55,7 +55,7 @@ depends_on=postgresql
 
 [program:redis-commander]
 command=redis-commander --port 8081 --redis-host localhost --redis-port 6379
-user=vscode
+user=redis
 autostart=true
 autorestart=true
 redirect_stderr=true
