🔧 chore: refactor DevContainer service initialization
- Replace inline postStartCommand with dedicated start-services.sh script
- Move from supervisord to direct service management for better control
- Simplify supervisord.conf by removing Redis and Redis Commander entries
- Add dotenv dependency to web client package.json
- Update .env.vault with new development environment configuration

Improves DevContainer startup reliability and maintainability by using
a structured shell script approach instead of complex inline commands.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -121,7 +121,5 @@
 
   // Lifecycle commands
   "postCreateCommand": "npm install --prefix backend && npm install --prefix clients/web",
-  "postStartCommand": "supervisord -c /etc/supervisor/conf.d/supervisord.conf && sleep 5 && echo '🚀 DevContainer ready!' && echo '📊 Services:' && echo '  PostgreSQL: localhost:5432' && echo '  Redis: localhost:6379' && echo '  Adminer: http://localhost:8080' && echo '  Redis Commander: http://localhost:8081' && echo '' && echo '🗄️  Adminer login details:' && echo '  Server: localhost' && echo '  Username: nexus' && echo '  Password: nexus_secure_2024' && echo '  Database: nexus_db' && echo '' && echo '💡 Quick Adminer URL:' && echo '  http://localhost:8080/?server=localhost&username=nexus&db=nexus_db'",
-
-  // DevContainer settings
+  "postStartCommand": "/workspaces/project-nexus/.devcontainer/start-services.sh"
 }
