🐛 fix: resolve infinite refresh loop in workspace permission validation
- Implement workspace access validator to prevent redirect loops
- Set workspace context before permission checks in layout
- Add proper loading states and error handling for workspace access
- Fix environment variable issues in npm dev script (use hardcoded port)
- Add Adminer auto-login functionality for development convenience
- Clean up unused development scripts and configuration files
- Update Docker Compose configuration with better Adminer integration

Fixes issue where users would get stuck in endless redirects when accessing
workspaces due to permission checks happening before workspace context was
established. Now validates access properly and redirects to available
workspaces when needed.

--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -4,7 +4,7 @@
   "description": "Project Nexus Web Client - Next.js 14 with Auth0 Authentication",
   "private": true,
   "scripts": {
-    "dev": "next dev -p $WEB_PORT",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
