🐛 fix: resolve onboarding completion workspace creation issue
- Fix API to use completeOnboardingWorkflow instead of completeOnboarding
- Add deprecation warnings to old completeOnboarding mutation
- Update workspace redirect logic to handle completion properly
- Add logging for better debugging of onboarding flow
- Fix devcontainer port mapping for local development

Resolves issue where completed onboarding would redirect back to start
because workspace was not being created during completion process.

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       DOCKER_ENV: "true"
       POSTGRES_HOST: postgres
       REDIS_HOST: redis
+    ports:
+      - "3000:3000"
+      - "3001:3001"
     volumes:
       - ..:/workspaces/project-nexus:cached
       - workspace-node-home:/home/node
